Background and text color correction in dark mode

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -472,36 +472,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 3rem;
 }
 
-.top-8 {
-  top: 2rem;
-}
-
-.right-8 {
-  right: 2rem;
-}
-
-.top-5 {
-  top: 1.25rem;
-}
-
-.right-5 {
-  right: 1.25rem;
-}
-
-.right-4 {
-  right: 1rem;
+.top-3 {
+  top: 0.75rem;
 }
 
 .right-3 {
   right: 0.75rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
-.top-3 {
-  top: 0.75rem;
 }
 
 .m-0 {
@@ -563,32 +539,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 16rem;
 }
 
-.h-8 {
-  height: 2rem;
+.h-5 {
+  height: 1.25rem;
 }
 
 .h-12 {
   height: 3rem;
 }
 
-.h-5 {
-  height: 1.25rem;
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-16 {
-  width: 4rem;
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-10\/12 {
   width: 83.333333%;
-}
-
-.w-10 {
-  width: 2.5rem;
 }
 
 .cursor-pointer {
@@ -670,14 +638,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 2rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -752,19 +720,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: block;
 }
 
-.after\:h-8::after {
-  content: var(--tw-content);
-  height: 2rem;
-}
-
 .after\:h-5::after {
   content: var(--tw-content);
   height: 1.25rem;
-}
-
-.after\:w-8::after {
-  content: var(--tw-content);
-  width: 2rem;
 }
 
 .after\:w-5::after {
@@ -814,6 +772,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(194 65 12 / var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-slate-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
 .dark .dark\:text-slate-200 {
   --tw-text-opacity: 1;
   color: rgb(226 232 240 / var(--tw-text-opacity));
@@ -827,6 +790,26 @@ Ensure the default browser behavior of the `hidden` attribute.
 .dark .dark\:text-slate-400 {
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-slate-300 {
+  --tw-text-opacity: 1;
+  color: rgb(203 213 225 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-stone-400 {
+  --tw-text-opacity: 1;
+  color: rgb(168 162 158 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-neutral-400 {
+  --tw-text-opacity: 1;
+  color: rgb(163 163 163 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-zinc-300 {
+  --tw-text-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-text-opacity));
 }
 
 .dark .dark\:after\:right-0::after {
@@ -855,22 +838,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     --tw-aspect-h: 9;
   }
 
-  .sm\:top-8 {
-    top: 2rem;
-  }
-
-  .sm\:right-8 {
-    right: 2rem;
-  }
-
-  .sm\:top-6 {
-    top: 1.5rem;
-  }
-
-  .sm\:right-6 {
-    right: 1.5rem;
-  }
-
   .sm\:top-5 {
     top: 1.25rem;
   }
@@ -891,12 +858,12 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 100%;
   }
 
-  .sm\:w-7\/12 {
-    width: 58.333333%;
-  }
-
   .sm\:w-16 {
     width: 4rem;
+  }
+
+  .sm\:w-7\/12 {
+    width: 58.333333%;
   }
 
   .sm\:grid-cols-2 {
@@ -917,6 +884,11 @@ Ensure the default browser behavior of the `hidden` attribute.
     line-height: 1;
   }
 
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
   .sm\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -924,11 +896,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .sm\:text-xl {
     font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .sm\:text-lg {
-    font-size: 1.125rem;
     line-height: 1.75rem;
   }
 
@@ -944,42 +911,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 768px) {
-  .md\:top-8 {
-    top: 2rem;
-  }
-
-  .md\:right-8 {
-    right: 2rem;
-  }
-
-  .md\:h-8 {
-    height: 2rem;
-  }
-
-  .md\:w-16 {
-    width: 4rem;
-  }
-
   .md\:border-b-8 {
     border-bottom-width: 8px;
   }
 
   .md\:text-justify {
     text-align: justify;
-  }
-
-  .md\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
-  .md\:after\:h-8::after {
-    content: var(--tw-content);
-    height: 2rem;
-  }
-
-  .md\:after\:w-8::after {
-    content: var(--tw-content);
-    width: 2rem;
   }
 }
